deploy: c2460d046a091ddef5c4a894b2eb1e62361d9d35

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <head>
     <meta charset="utf-8">
 
-<!-- begin _includes/seo.html --><title>دفتر الخواطر</title>
+<!-- begin _includes/seo.html --><title>حِبر شفاف</title>
 <meta name="description" content="مدونة شخصية للتعبير عن الخواطر، التأملات، ومشاركة الرؤى حول الحياة وتطوير الذات.">
 
 
@@ -20,8 +20,8 @@
 
 <meta property="og:type" content="website">
 <meta property="og:locale" content="ar">
-<meta property="og:site_name" content="دفتر الخواطر">
-<meta property="og:title" content="دفتر الخواطر">
+<meta property="og:site_name" content="حِبر شفاف">
+<meta property="og:title" content="حِبر شفاف">
 <meta property="og:url" content="https://djameldidin.github.io/daftar-khawater/">
 
 
@@ -65,7 +65,7 @@
 
 
 
-  <link href="/daftar-khawater/feed.xml" type="application/atom+xml" rel="alternate" title="دفتر الخواطر Feed">
+  <link href="/daftar-khawater/feed.xml" type="application/atom+xml" rel="alternate" title="حِبر شفاف Feed">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <script>
@@ -105,7 +105,7 @@
       <nav id="site-nav" class="greedy-nav">
         
         <a class="site-title" href="/daftar-khawater/">
-          دفتر الخواطر
+          حِبر شفاف
           
         </a>
         <ul class="visible-links"><li class="masthead__menu-item">
@@ -384,7 +384,7 @@
 </div>
 
 
-<div class="page__footer-copyright">&copy; 2025 <a href="https://djameldidin.github.io">دفتر الخواطر</a>. تم تطوير بواسطة <a href="https://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://mademistakes.com/work/jekyll-themes/minimal-mistakes/" rel="nofollow">Minimal Mistakes</a>.</div>
+<div class="page__footer-copyright">&copy; 2025 <a href="https://djameldidin.github.io">حِبر شفاف</a>. تم تطوير بواسطة <a href="https://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://mademistakes.com/work/jekyll-themes/minimal-mistakes/" rel="nofollow">Minimal Mistakes</a>.</div>
 
       </footer>
     </div>
