--- a/thoughts/2025-08-03-first-thought/index.html
+++ b/thoughts/2025-08-03-first-thought/index.html
@@ -10,7 +10,7 @@
   <head>
     <meta charset="utf-8">
 
-<!-- begin _includes/seo.html --><title>خاطرة أولى: بداية الرحلة - دفتر الخواطر</title>
+<!-- begin _includes/seo.html --><title>خاطرة أولى: بداية الرحلة - حِبر شفاف</title>
 <meta name="description" content="هنا تبدأ الحكاية، مع أول نبض للحرف على هذه الصفحة البيضاء. مجرد فكرة عابرة، ورغبة في تدوين اللحظة قبل أن تتلاشى في زحام الأيام.">
 
 
@@ -22,7 +22,7 @@
 
 <meta property="og:type" content="article">
 <meta property="og:locale" content="ar">
-<meta property="og:site_name" content="دفتر الخواطر">
+<meta property="og:site_name" content="حِبر شفاف">
 <meta property="og:title" content="خاطرة أولى: بداية الرحلة">
 <meta property="og:url" content="https://djameldidin.github.io/daftar-khawater/thoughts/2025-08-03-first-thought/">
 
@@ -59,7 +59,7 @@
 
 
 
-  <link href="/daftar-khawater/feed.xml" type="application/atom+xml" rel="alternate" title="دفتر الخواطر Feed">
+  <link href="/daftar-khawater/feed.xml" type="application/atom+xml" rel="alternate" title="حِبر شفاف Feed">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <script>
@@ -99,7 +99,7 @@
       <nav id="site-nav" class="greedy-nav">
         
         <a class="site-title" href="/daftar-khawater/">
-          دفتر الخواطر
+          حِبر شفاف
           
         </a>
         <ul class="visible-links"><li class="masthead__menu-item">
@@ -373,7 +373,7 @@
 </div>
 
 
-<div class="page__footer-copyright">&copy; 2025 <a href="https://djameldidin.github.io">دفتر الخواطر</a>. تم تطوير بواسطة <a href="https://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://mademistakes.com/work/jekyll-themes/minimal-mistakes/" rel="nofollow">Minimal Mistakes</a>.</div>
+<div class="page__footer-copyright">&copy; 2025 <a href="https://djameldidin.github.io">حِبر شفاف</a>. تم تطوير بواسطة <a href="https://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://mademistakes.com/work/jekyll-themes/minimal-mistakes/" rel="nofollow">Minimal Mistakes</a>.</div>
 
       </footer>
     </div>
