--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@ layout: single
 author_profile: true
 ---
 
+<h1 style="text-align: center; color: red;">تحديث إجباري بتاريخ 5 أغسطس 2025</h1>
+
+<div class="page__content">
+  ... (بقية محتوى الصفحة)
+
 <div class="page__content">
   <h2 style="text-align: center; border-bottom: 2px solid #eee; padding-bottom: 10px; margin-bottom: 20px;">
     ✨ أحدث التدوينات ✨
