deploy: 6a9fbd60f8e5a7ace12776f44d316766af78c617

--- a/index.html
+++ b/index.html
@@ -301,7 +301,12 @@
 
       <section class="page__content" itemprop="text">
         
-        <div class="page__content">
+        <h1 style="text-align: center; color: red;">تحديث إجباري بتاريخ 5 أغسطس 2025</h1>
+
+<div class="page__content">
+  ... (بقية محتوى الصفحة)
+
+<div class="page__content">
   <h2 style="text-align: center; border-bottom: 2px solid #eee; padding-bottom: 10px; margin-bottom: 20px;">
     ✨ أحدث التدوينات ✨
   </h2>
