deploy: 82996d1c9fda7c74590d077c0cbd0199d3544993

--- a/ressources-gratuites/index.html
+++ b/ressources-gratuites/index.html
@@ -10,8 +10,8 @@
   <head>
     <meta charset="utf-8">
 
-<!-- begin _includes/seo.html --><title>أدوات ومصادر مجانية - حِبر شفاف</title>
-<meta name="description" content="مدونة شخصية للتعبير عن الخواطر، التأملات، ومشاركة الرؤى حول الحياة وتطوير الذات.">
+<!-- begin _includes/seo.html --><title>أدوات ومصادر مجانية - حبر شفاف</title>
+<meta name="description" content="مساحة للكتابة الصادقة، الأفكار الواضحة، والتأملات التي تعبر عن الذات.">
 
 
   <meta name="author" content="عدلي رغدة">
@@ -20,12 +20,12 @@
 
 <meta property="og:type" content="website">
 <meta property="og:locale" content="ar">
-<meta property="og:site_name" content="حِبر شفاف">
+<meta property="og:site_name" content="حبر شفاف">
 <meta property="og:title" content="أدوات ومصادر مجانية">
 <meta property="og:url" content="https://djameldidin.github.io/daftar-khawater/ressources-gratuites/">
 
 
-  <meta property="og:description" content="مدونة شخصية للتعبير عن الخواطر، التأملات، ومشاركة الرؤى حول الحياة وتطوير الذات.">
+  <meta property="og:description" content="مساحة للكتابة الصادقة، الأفكار الواضحة، والتأملات التي تعبر عن الذات.">
 
 
 
@@ -55,7 +55,7 @@
 
 
 
-  <link href="/daftar-khawater/feed.xml" type="application/atom+xml" rel="alternate" title="حِبر شفاف Feed">
+  <link href="/daftar-khawater/feed.xml" type="application/atom+xml" rel="alternate" title="حبر شفاف Feed">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <script>
@@ -95,7 +95,7 @@
       <nav id="site-nav" class="greedy-nav">
         
         <a class="site-title" href="/daftar-khawater/">
-          حِبر شفاف
+          حبر شفاف
           
         </a>
         <ul class="visible-links"><li class="masthead__menu-item">
@@ -360,7 +360,7 @@
 </div>
 
 
-<div class="page__footer-copyright">&copy; 2025 <a href="https://djameldidin.github.io">حِبر شفاف</a>. تم تطوير بواسطة <a href="https://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://mademistakes.com/work/jekyll-themes/minimal-mistakes/" rel="nofollow">Minimal Mistakes</a>.</div>
+<div class="page__footer-copyright">&copy; 2025 <a href="https://djameldidin.github.io">حبر شفاف</a>. تم تطوير بواسطة <a href="https://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://mademistakes.com/work/jekyll-themes/minimal-mistakes/" rel="nofollow">Minimal Mistakes</a>.</div>
 
       </footer>
     </div>
