deploy: 19d410e036d2dc9969d37b2b475bd9cf025203a2

--- a/about/index.html
+++ b/about/index.html
@@ -298,7 +298,7 @@
 
 <p>مرحباً، اسمي <strong>عدلي رغدة</strong>.<br />
 أجد شغفي في التأمل وتدوين الأفكار التي تلامس الروح.<br />
-من خلال “دفتر الخواطر”، أشارككم جزءاً مني، وجزءاً من الأفكار التي تتراقص في ذهني، بأسلوب يجمع بين البساطة والعمق.</p>
+من خلال “حبر شفاف”، أشارككم جزءاً مني، وجزءاً من الأفكار التي تتراقص في ذهني، بأسلوب يجمع بين البساطة والعمق.</p>
 
 <hr />
 
