deploy: 95021a7dac2d7a4cb5f7fc73123a36ce073aea91

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
     </h3>
     
       <div class="author__bio p-note" itemprop="description">
-        <p>أؤمن أن أبسط فكرة يمكنها أن تغيّر نظرتنا للعالم إذا قُدمت في قالب جميل. هنا مساحة للخواطر والتأملات.</p>
+        <p>أؤمن أن أبسط فكرة يمكنها أن تغيّر نظرتنا للعالم إذا قُدمت في قالب جميل. هنا مساحة للكتابة والتأملات.</p>
 
       </div>
     
