--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ author_profile: true
   <hr>
 
   <div style="text-align: center; margin-top: 30px;">
-    <a href="/pause-detente/" class="btn btn--primary btn--large">اكتشف ركن الترفيه</a>
+    <a href="{{ '/pause-detente/' | relative_url }}" class="btn btn--primary btn--large">اكتشف ركن الترفيه</a>
   </div>
 
 </div>
