deploy: d0f70668e15171d0005e4ef4fca6dacd7f885a20

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
   <hr>
 
   <div style="text-align: center; margin-top: 30px;">
-    <a href="/pause-detente/" class="btn btn--primary btn--large">اكتشف ركن الترفيه</a>
+    <a href="/hibr-shafaf/pause-detente/" class="btn btn--primary btn--large">اكتشف ركن الترفيه</a>
   </div>
 
 </div>
