--- a/life-stories/index.html
+++ b/life-stories/index.html
@@ -150,11 +150,6 @@
   
 </div>
 
-<div id="giscus_thread">
-  <script src="https://giscus.app/client.js" data-repo="djameldidin/hibr-shafaf" data-repo-id="R_kgDOPXhahw" data-category="Announcements" data-category-id="DIC_kwDOPXhah84Ct3GA" data-mapping="pathname" data-reactions-enabled="1" data-emit-metadata="0" data-input-position="bottom" data-theme="light" data-lang="ar" crossorigin="anonymous" async="">
-  </script>
-</div>
-
 
   </div>
 </div>
@@ -200,38 +195,21 @@
 
 
 
-    <script>
-  'use strict';
-
-  (function () {
-    var commentContainer = document.querySelector('#giscus-comments');
-
-    if (!commentContainer) {
-      return;
-    }
-
-    var script = document.createElement('script');
-
-    script.setAttribute('src', 'https://giscus.app/client.js');
-    script.setAttribute('data-repo', 'djameldidin/hibr-shafaf');
-    script.setAttribute('data-repo-id', 'R_kgDOPXhahw');
-    script.setAttribute('data-category', '');
-    script.setAttribute('data-category-id', 'DIC_kwDOPXhah84Ct3GA');
-    script.setAttribute('data-mapping', 'pathname');
-    script.setAttribute('data-strict', '0');
-    script.setAttribute('data-reactions-enabled', '1');
-    script.setAttribute('data-emit-metadata', '0');
-    script.setAttribute('data-input-position', 'top');
-    script.setAttribute('data-theme', 'light');
-    script.setAttribute('data-lang',  'en');
     
-    script.setAttribute('crossorigin', 'anonymous');
+  <script>
+    var disqus_config = function () {
+      this.page.url = "https://djameldidin.github.io/hibr-shafaf/life-stories/";  /* Replace PAGE_URL with your page's canonical URL variable */
+      this.page.identifier = ""; /* Replace PAGE_IDENTIFIER with your page's unique identifier variable */
+    };
+    (function() { /* DON'T EDIT BELOW THIS LINE */
+      var d = document, s = d.createElement('script');
+      s.src = 'https://https-djameldidin-github-io-hibr-shafaf.disqus.com/embed.js';
+      s.setAttribute('data-timestamp', +new Date());
+      (d.head || d.body).appendChild(s);
+    })();
+  </script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 
-    script.setAttribute('async', '');
-
-    commentContainer.appendChild(script);
-  })();
-</script>
 
   
 
