deploy: 2a5978afe9ebb56dd9c9904d27b7c8a9d93fd090

--- a/cahier-des-lecteurs/index.html
+++ b/cahier-des-lecteurs/index.html
@@ -287,6 +287,22 @@
 <h4 id="كيف-تشارك">كيف تشارك؟</h4>
 <p>في الوقت الحالي، أفضل طريقة للمشاركة هي عبر ترك تعليقاتكم على “الخواطر” و “المقالات”. تعليقاتكم هي التي ستبني هذا الركن وتثريه.</p>
 
+<div id="disqus_thread"></div>
+<script>
+  var disqus_config = function () {
+    this.page.url = "https://djameldidin.github.io/hibr-shafaf/cahier-des-lecteurs/";
+    this.page.identifier = "/cahier-des-lecteurs/";
+  };
+  (function() {
+    var d = document, s = d.createElement('script');
+    s.src = 'https://https-djameldidin-github-io-hibr-shafaf.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+  })();
+</script>
+
+<noscript>يرجى تفعيل الجافا سكريبت لرؤية التعليقات.</noscript>
+
 
         
       </section>
