--- a/life-stories/index.html
+++ b/life-stories/index.html
@@ -150,6 +150,22 @@
   
 </div>
 
+<div id="disqus_thread"></div>
+<script>
+  var disqus_config = function () {
+    this.page.url = "https://djameldidin.github.io/hibr-shafaf/life-stories/";
+    this.page.identifier = "/life-stories/";
+  };
+  (function() {
+    var d = document, s = d.createElement('script');
+    s.src = 'https://https-djameldidin-github-io-hibr-shafaf.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+  })();
+</script>
+
+<noscript>يرجى تفعيل الجافا سكريبت لرؤية التعليقات.</noscript>
+
 
   </div>
 </div>
