--- a/thoughts/2025-08-03-first-thought/index.html
+++ b/thoughts/2025-08-03-first-thought/index.html
@@ -280,6 +280,23 @@
         
         <p>هنا تبدأ الحكاية، مع أول نبض للحرف على هذه الصفحة البيضاء. مجرد فكرة عابرة، ورغبة في تدوين اللحظة قبل أن تتلاشى في زحام الأيام.</p>
 
+<div id="disqus_thread"></div>
+<script>
+  var disqus_config = function () {
+    this.page.url = "https://djameldidin.github.io/hibr-shafaf/thoughts/2025-08-03-first-thought/";
+    this.page.identifier = "/thoughts/2025-08-03-first-thought/";
+  };
+  (function() {
+    var d = document, s = d.createElement('script');
+    s.src = 'https://https-djameldidin-github-io-hibr-shafaf.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+  })();
+</script>
+
+<noscript>يرجى تفعيل الجافا سكريبت لرؤية التعليقات.</noscript>
+
+
         
       </section>
 
