--- a/index.html
+++ b/index.html
@@ -290,8 +290,8 @@
   <ul>
     
       <li>
-        <a href="/hibr-shafaf/articles/2025-08-03-welcome-article/">مرحباً بك في دفتر الخواطر</a>
-        <p>أهلاً بك يا صديقي القارئ في هذا الركن الهادئ من العالم الرقمي. “دفتر الخواطر” ليس مجرد مدونة، بل هو دعوة مفتوحة للتوقف قليلاً، للتنفس بعمق، وللتفكير في تلك التفاصيل الصغيرة...</p>
+        <a href="/hibr-shafaf/articles/2025-08-03-welcome-article/">مرحباً بك في حبر شفاف</a>
+        <p>أهلاً بك يا صديقي القارئ في هذا الركن الهادئ من العالم الرقمي. “حبر شفاف” ليس مجرد مدونة، بل هو دعوة مفتوحة للتوقف قليلاً، للتنفس بعمق، وللتفكير في تلك التفاصيل الصغيرة...</p>
       </li>
     
   </ul>
