--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   <div class="masthead__inner-wrap">
     <nav id="site-nav" class="greedy-nav">
       <button class="masthead__menu-toggle">
-        <i class="fas fa-bars"></i>
+        <i class="fas fa-bars" aria-hidden="true"></i>
       </button>
 
       <ul class="visible-links"><li><a href="/hibr-shafaf/"><span class='icon-only-mobile'>🏠</span> الرئيسية  </a></li><li><a href="/hibr-shafaf/articles/"><span class='icon-only-mobile'>📂</span> المقالات </a></li><li><a href="/hibr-shafaf/thoughts/"><span class='icon-only-mobile'>🖋️</span> خواطر </a></li><li class="dropdown">
@@ -114,22 +114,32 @@
 
 <script>
   document.addEventListener('DOMContentLoaded', function () {
-    const toggleBtn = document.querySelector('.masthead__menu-toggle');
     const nav = document.querySelector('.greedy-nav');
+    const toggleBtn = document.querySelector('.masthead__menu-toggle');
 
-    // تفعيل زر القائمة في الهاتف
+    // 1. تفعيل زر القائمة في الهاتف
     if (toggleBtn) {
       toggleBtn.addEventListener('click', () => {
         nav.classList.toggle('nav-open');
       });
     }
 
-    // تفعيل القوائم المنسدلة عند النقر في الهاتف
+    // 2. تفعيل القوائم المنسدلة عند النقر على كل الأجهزة
     document.querySelectorAll('.dropdown-toggle').forEach(item => {
       item.addEventListener('click', event => {
-        if (window.innerWidth <= 960) {
-          event.preventDefault();
-          item.parentElement.classList.toggle('open');
+        event.preventDefault();
+        item.parentElement.classList.toggle('open');
+      });
+    });
+
+    // 3. إغلاق القائمة المنسدلة الرئيسية عند النقر على رابط بداخلها في وضع الهاتف
+    document.querySelectorAll('.visible-links a').forEach(link => {
+      link.addEventListener('click', () => {
+        if (window.innerWidth <= 960 && nav.classList.contains('nav-open')) {
+          // لا تغلق القائمة إذا كان الرابط هو زر قائمة فرعية
+          if (!link.classList.contains('dropdown-toggle')) {
+            nav.classList.remove('nav-open');
+          }
         }
       });
     });
